--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,12 +26,14 @@ http {
       proxy_pass  http://backend:8000;
     }
 
-    location /static/ {
-      alias $ROOT_DIR/static/;
+    location ~* ^/media/pattern/pdfs/ {
+        internal;
+        autoindex off;
     }
 
-    location /media/ {
-      alias $ROOT_DIR/media/;
+     location /media/ {
+        alias $ROOT_DIR/media/;
+        autoindex off;
     }
   }
 }
