--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,25 +38,25 @@ services:
       postgres:
         condition: service_healthy
 
-  tg_bot:
-    build:
-      context: ./backend
-      dockerfile: ./Docker/bot/Dockerfile
-    restart: always
-    volumes:
-      - ./backend:/usr/src/app
-    environment:
-      - DEBUG=${DEBUG}
-      - DB_PASS=${DB_PASS}
-      - DB_USER=${DB_USER}
-      - DB_NAME=${DB_NAME}
-      - DB_PORT=${DB_PORT}
-      - DB_HOST=${DB_HOST}
-      - DOMAIN=${DOMAIN}
-      - SECRET_KEY=${SECRET_KEY}
-      - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
-    depends_on:
-      - backend
+#  tg_bot:
+#    build:
+#      context: ./backend
+#      dockerfile: ./Docker/bot/Dockerfile
+#    restart: always
+#    volumes:
+#      - ./backend:/usr/src/app
+#    environment:
+#      - DEBUG=${DEBUG}
+#      - DB_PASS=${DB_PASS}
+#      - DB_USER=${DB_USER}
+#      - DB_NAME=${DB_NAME}
+#      - DB_PORT=${DB_PORT}
+#      - DB_HOST=${DB_HOST}
+#      - DOMAIN=${DOMAIN}
+#      - SECRET_KEY=${SECRET_KEY}
+#      - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
+#    depends_on:
+#      - backend
 
   nginx:
     build: ./nginx
