--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,7 @@ http {
 
     client_max_body_size 4G;
 
-    set $ROOT_DIR /var/www;
+    set $ROOT_DIR /usr/src/app;
 
     location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -26,13 +26,18 @@ http {
       proxy_pass  http://backend:8000;
     }
 
+    location /static/ {
+      root $ROOT_DIR;
+      autoindex on;
+    }
+
     location ~* ^/media/pattern/pdfs/ {
         internal;
         autoindex off;
     }
 
      location /media/ {
-        alias $ROOT_DIR/media/;
+        alias $ROOT_DIR;
         autoindex off;
     }
   }
