--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,7 +72,7 @@ services:
       - "443:443"
     volumes:
       - static_value:/usr/src/app/static
-      - static_value:/usr/src/app/media
+      - media_value:/usr/src/app/media
 
 volumes:
   postgresql-data:
