feat(env): Фикс nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,14 +31,7 @@ http {
       autoindex on;
     }
 
-    location ~* ^/media/pattern/pdfs/ {
-        internal;
-        autoindex off;
-    }
-
-     location /media/ {
-        alias $ROOT_DIR;
-        autoindex off;
-    }
+    location /media/ {
+        root $ROOT_DIR;
   }
 }
