--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,8 @@ http {
     access_log  off;
     listen 80;
     listen [::]:80;
+    listen 443 ssl;
+    listen [::]:443 ssl;
 
     client_max_body_size 4G;
 
