test(project): тестирование функционала

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,7 +23,7 @@ COPY entrypoint.sh .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 RUN chmod +x /usr/src/app/entrypoint.sh
-RUN chmod +x /usr/src/app/static/django_admin_inline_paginator
+RUN chmod -R 777 /usr/src/app/static/
 
 COPY . .
 
