--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,5 +21,5 @@ COPY entrypoint.sh .
 
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-RUN ["chmod", "+x", "/usr/src/app/entrypoint.sh"]
+RUN chmod +x ./entrypoint.sh
 COPY . .
