test(project): тестирование функционала

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ http {
 
   server {
     set $domain ${DOMAIN};
-    server_name ${domain} www.${domain};
+    server_name ${domain} www.${domain} www.hushtimebot.ru hushtimebot.ru;
 
     underscores_in_headers on;
     access_log  off;
