--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,6 +46,8 @@ services:
       - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
       - TARGET_CHAT_ID=${TARGET_CHAT_ID}
       - CSRF_TRUSTED_DOMAINS=${CSRF_TRUSTED_DOMAINS}
+      - SENTRY_DNS=${SENTRY_DNS}
+      - DNS=${DNS}
     depends_on:
       postgres:
         condition: service_healthy
@@ -88,6 +90,8 @@ services:
       - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
       - TARGET_CHAT_ID=${TARGET_CHAT_ID}
       - CSRF_TRUSTED_DOMAINS=${CSRF_TRUSTED_DOMAINS}
+      - SENTRY_DNS=${SENTRY_DNS}
+      - DNS=${DNS}
     command: celery -A config worker -l error
 
 
