--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ http {
 
   server {
     set $domain ${DOMAIN};
-    server_name ${domain} www.${domain} www.hushtimebot.ru hushtimebot.ru;
+    server_name ${domain} www.${domain} www.${DNS} ${DNS};
 
     underscores_in_headers on;
     access_log  off;
