--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -92,7 +92,44 @@ services:
       - CSRF_TRUSTED_DOMAINS=${CSRF_TRUSTED_DOMAINS}
       - SENTRY_DNS=${SENTRY_DNS}
       - DNS=${DNS}
-    command: celery -A config worker -l error
+    command: celery -A config worker -l error -c 2
+
+
+  tgbot:
+    container_name: tgbot
+    build: ./backend
+    restart: always
+    volumes:
+      - ./backend:/usr/src/app
+      - static_value:/usr/src/app/static/
+      - media_value:/usr/src/app/media/
+    environment:
+      - DEBUG=${DEBUG}
+      - DB_PASS=${DB_PASS}
+      - DB_USER=${DB_USER}
+      - DB_NAME=${DB_NAME}
+      - DB_PORT=${DB_PORT}
+      - DB_HOST=${DB_HOST}
+      - DOMAIN=${DOMAIN}
+      - SECRET_KEY=${SECRET_KEY}
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+      - API_KEY=${API_KEY}
+      - API_NAME=${API_NAME}
+      - ADMIN_URL=${ADMIN_URL}
+      - EMAIL=${EMAIL}
+      - EMAIL_TOKEN=${EMAIL_TOKEN}
+      - CELERY_BROKER=${CELERY_BROKER}
+      - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
+      - TARGET_CHAT_ID=${TARGET_CHAT_ID}
+      - CSRF_TRUSTED_DOMAINS=${CSRF_TRUSTED_DOMAINS}
+      - SENTRY_DNS=${SENTRY_DNS}
+      - DNS=${DNS}
+    depends_on:
+      - backend
+      - postgres
+    command: sh -c 'uvicorn apps.tgbot.fastapp:app --host 0.0.0.0 --port 5555 --reload & python apps/tgbot/main.py'
+    ports:
+      - "5555:5555"
 
 
   nginx:
