--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,6 +48,7 @@ services:
       - CSRF_TRUSTED_DOMAINS=${CSRF_TRUSTED_DOMAINS}
       - SENTRY_DNS=${SENTRY_DNS}
       - DNS=${DNS}
+      - ALLOWED_CHATS=${ALLOWED_CHATS}
     depends_on:
       postgres:
         condition: service_healthy
@@ -92,6 +93,7 @@ services:
       - CSRF_TRUSTED_DOMAINS=${CSRF_TRUSTED_DOMAINS}
       - SENTRY_DNS=${SENTRY_DNS}
       - DNS=${DNS}
+      - ALLOWED_CHATS=${ALLOWED_CHATS}
     command: celery -A config worker -l error -c 2
 
 
@@ -124,10 +126,11 @@ services:
       - CSRF_TRUSTED_DOMAINS=${CSRF_TRUSTED_DOMAINS}
       - SENTRY_DNS=${SENTRY_DNS}
       - DNS=${DNS}
+      - ALLOWED_CHATS=${ALLOWED_CHATS}
     depends_on:
       - backend
       - postgres
-    command: sh -c 'uvicorn apps.tgbot.fastapp:app --host 0.0.0.0 --port 5555 --reload & python apps/tgbot/main.py'
+    command: sh -c 'uvicorn apps.tgbot.fastapp:app --host 0.0.0.0 --port 5555 --reload & python -m apps.tgbot.main'
     ports:
       - "5555:5555"
 
