--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -105,6 +105,7 @@ services:
       - ./backend:/usr/src/app
       - static_value:/usr/src/app/static/
       - media_value:/usr/src/app/media/
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - DEBUG=${DEBUG}
       - DB_PASS=${DB_PASS}
