--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ share/python-wheels/
 MANIFEST
 static/
 media/
+.ruff_cache
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
