--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ MANIFEST
 static/
 media/
 .ruff_cache
+backup/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
