--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -115,7 +115,7 @@ services:
     depends_on:
       - backend
       - postgres
-    command: sh -c 'uvicorn apps.tgbot.fastapp:app --host 0.0.0.0 --port 5555 --reload & python -m apps.tgbot.main'
+    command: sh -c 'uvicorn apps.tgbot.fastapp:app --host 0.0.0.0 --port 5555 & python -m apps.tgbot.main'
     ports:
       - "5555:5555"
 
