--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -71,6 +71,7 @@ services:
       - ./backend:/usr/src/app
       - static_value:/usr/src/app/static/
       - media_value:/usr/src/app/media/
+      - /var/run/docker.sock:/var/run/docker.sock
     <<: *default-environment
     depends_on:
       postgres:
