fix(docker): фикс

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -102,7 +102,7 @@ services:
       - static_value:/usr/src/app/static/
       - media_value:/usr/src/app/media/
     <<: *default-environment
-    command: celery -A config worker -l info -E -c 2
+    command: celery -A config worker -l error -E -c 2
 
 
   flower:
