--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -157,14 +157,14 @@ services:
       - media_value:/usr/src/app/media
 
 
-  test:
-    build: ./backend
-    command: python manage.py test
-    volumes:
-      - ./backend:/usr/src/app
-    depends_on:
-      - postgres
-    <<: *default-environment
+#  test:
+#    build: ./backend
+#    command: python manage.py test
+#    volumes:
+#      - ./backend:/usr/src/app
+#    depends_on:
+#      - postgres
+#    <<: *default-environment
 
 
 volumes:
