--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -9,6 +9,8 @@ on:
 jobs:
   build-push-and-test:
     runs-on: ubuntu-latest
+    environment:
+      name: ${{ (github.ref == 'refs/heads/develop') && 'test' || 'main' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
