feat(cicd): тест конфига

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -24,6 +24,10 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Print environment variable names
+        run: |
+            echo "{{ env.ALLOWED_HOSTS }}"
+
       - name: Build, push Docker images, and run tests
         run: |
           docker-compose -f docker-compose.yaml build
