--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -36,6 +36,7 @@ jobs:
       FLOWER_USER: ${{ secrets.FLOWER_USER }}
       FLOWER_PASS: ${{ secrets.FLOWER_PASS }}
       FLOWER_URL_PREFIX: ${{ secrets.FLOWER_URL_PREFIX }}
+      CSRF_TRUSTED_ORIGINS: ${{ secrets.CSRF_TRUSTED_ORIGINS }}
     environment:
       name: ${{ (github.ref == 'refs/heads/develop') && 'test' || 'main' }}
     steps:
