--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -56,7 +56,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: True
-          tags: user/app:latest
+          tags: stevinel/tilda-helper:latest
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
