--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -50,16 +50,31 @@ jobs:
           docker-compose -f docker-compose.yaml build
           docker-compose -f docker-compose.yaml -f docker-compose.test.yaml run --rm backend /bin/sh -c "python manage.py test -v3 --noinput"
 
-      - name: Push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./backend/Dockerfile
-          push: True
-          tags: stevinel/tilda-helper:latest
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push Docker image to Docker Hub
+        runs-on: ubuntu-latest
+        steps:
+          - name: Check out the repo
+            uses: actions/checkout@v4
+          - name: Log in to Docker Hub
+            uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+            with:
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
+
+          - name: Extract metadata (tags, labels) for Docker
+            id: meta
+            uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+            with:
+              images: stevinel/tilda-helper
+
+          - name: Build and push Docker image
+            uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+            with:
+              context: .
+              file: ./backend/Dockerfile
+              push: true
+              tags: ${{ steps.meta.outputs.tags }}
+              labels: ${{ steps.meta.outputs.labels }}
 
   deploy:
     needs: build-push-and-test
