--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -79,7 +79,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   deploy:
-    needs: build-push-and-test
+    needs: push_to_registry
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
