--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -52,6 +52,7 @@ jobs:
 
   push_to_registry:
     name: Push Docker image to Docker Hub
+    needs: build-and-test
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
