--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -36,6 +36,7 @@ env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
   ENV_VARS: ${{ secrets.ENV_VARS }}
+  PROJECT_PATH : ${{ secrets.PROJECT_PATH }}
 
 jobs:
   build-and-test:
@@ -91,9 +92,8 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
           script: |
-            docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
             cd ${{ secrets.PROJECT_PATH }}
             docker pull stevinel/tilda-helper:latest
             echo "${{ secrets.ENV_VARS }}" | tr ';' '\n' > .env
