feat(cicd): тест конфига

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -96,7 +96,7 @@ jobs:
           script: |
             docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             cat docker-compose.yaml | ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} 'cat > ${{ secrets.PROJECT_PATH }}/docker-compose.yaml'
-            ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+            ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}
             cd ${{ secrets.PROJECT_PATH }}
             echo "${{ secrets.ENV_VARS }}" | tr ';' '\n' > .env
             docker pull stevinel/tilda-helper:latest
